--- a/Hospital Beds Management/JBI100_Data_Exploration_25-26-checkpoint.ipynb
+++ b/Hospital Beds Management/JBI100_Data_Exploration_25-26-checkpoint.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -111,76 +111,76 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>941</th>\n",
-       "      <td>PAT-d78122d6</td>\n",
-       "      <td>Alexa Buck</td>\n",
-       "      <td>73</td>\n",
-       "      <td>2025-01-06</td>\n",
-       "      <td>2025-01-14</td>\n",
-       "      <td>ICU</td>\n",
-       "      <td>62</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>89</th>\n",
-       "      <td>PAT-67f7e3c0</td>\n",
-       "      <td>Nathan Freeman</td>\n",
-       "      <td>88</td>\n",
-       "      <td>2025-03-09</td>\n",
-       "      <td>2025-03-23</td>\n",
-       "      <td>emergency</td>\n",
-       "      <td>96</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>107</th>\n",
-       "      <td>PAT-e084c2a6</td>\n",
-       "      <td>Mark Brown</td>\n",
-       "      <td>77</td>\n",
-       "      <td>2025-01-12</td>\n",
-       "      <td>2025-01-19</td>\n",
-       "      <td>emergency</td>\n",
-       "      <td>61</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>524</th>\n",
-       "      <td>PAT-32bcc4bc</td>\n",
-       "      <td>Amber Cooper</td>\n",
-       "      <td>8</td>\n",
-       "      <td>2025-09-17</td>\n",
-       "      <td>2025-10-01</td>\n",
-       "      <td>surgery</td>\n",
-       "      <td>90</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>PAT-fade1b7b</td>\n",
-       "      <td>Stephanie Manning</td>\n",
-       "      <td>84</td>\n",
-       "      <td>2025-11-09</td>\n",
-       "      <td>2025-11-15</td>\n",
+       "      <th>121</th>\n",
+       "      <td>PAT-55170e9d</td>\n",
+       "      <td>Susan Serrano</td>\n",
+       "      <td>28</td>\n",
+       "      <td>2025-10-15</td>\n",
+       "      <td>2025-10-17</td>\n",
        "      <td>general_medicine</td>\n",
-       "      <td>86</td>\n",
+       "      <td>73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>873</th>\n",
+       "      <td>PAT-94aeadf6</td>\n",
+       "      <td>Sean Curtis</td>\n",
+       "      <td>84</td>\n",
+       "      <td>2025-02-25</td>\n",
+       "      <td>2025-03-03</td>\n",
+       "      <td>emergency</td>\n",
+       "      <td>81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>705</th>\n",
+       "      <td>PAT-8718ccfc</td>\n",
+       "      <td>Anna Estes</td>\n",
+       "      <td>42</td>\n",
+       "      <td>2025-10-17</td>\n",
+       "      <td>2025-10-25</td>\n",
+       "      <td>ICU</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>693</th>\n",
+       "      <td>PAT-5f036208</td>\n",
+       "      <td>Rodney Williams</td>\n",
+       "      <td>52</td>\n",
+       "      <td>2025-11-11</td>\n",
+       "      <td>2025-11-17</td>\n",
+       "      <td>general_medicine</td>\n",
+       "      <td>80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>320</th>\n",
+       "      <td>PAT-553b6a48</td>\n",
+       "      <td>Maria Henderson</td>\n",
+       "      <td>21</td>\n",
+       "      <td>2025-07-08</td>\n",
+       "      <td>2025-07-09</td>\n",
+       "      <td>general_medicine</td>\n",
+       "      <td>62</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       patient_id               name  age arrival_date departure_date  \\\n",
-       "941  PAT-d78122d6         Alexa Buck   73   2025-01-06     2025-01-14   \n",
-       "89   PAT-67f7e3c0     Nathan Freeman   88   2025-03-09     2025-03-23   \n",
-       "107  PAT-e084c2a6         Mark Brown   77   2025-01-12     2025-01-19   \n",
-       "524  PAT-32bcc4bc       Amber Cooper    8   2025-09-17     2025-10-01   \n",
-       "39   PAT-fade1b7b  Stephanie Manning   84   2025-11-09     2025-11-15   \n",
+       "       patient_id             name  age arrival_date departure_date  \\\n",
+       "121  PAT-55170e9d    Susan Serrano   28   2025-10-15     2025-10-17   \n",
+       "873  PAT-94aeadf6      Sean Curtis   84   2025-02-25     2025-03-03   \n",
+       "705  PAT-8718ccfc       Anna Estes   42   2025-10-17     2025-10-25   \n",
+       "693  PAT-5f036208  Rodney Williams   52   2025-11-11     2025-11-17   \n",
+       "320  PAT-553b6a48  Maria Henderson   21   2025-07-08     2025-07-09   \n",
        "\n",
        "              service  satisfaction  \n",
-       "941               ICU            62  \n",
-       "89          emergency            96  \n",
-       "107         emergency            61  \n",
-       "524           surgery            90  \n",
-       "39   general_medicine            86  "
+       "121  general_medicine            73  \n",
+       "873         emergency            81  \n",
+       "705               ICU            70  \n",
+       "693  general_medicine            80  \n",
+       "320  general_medicine            62  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
        "max      89.000000     99.000000"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1092,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1298,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1798,7 +1798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1806,7 +1806,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "=== PATIENTS — Timestamp checks ===\n",
+      " PATIENTS — Timestamp checks \n",
       "Detected time columns: ['arrival_date', 'departure_date']\n",
       "\n",
       "Column: arrival_date\n",
@@ -2257,15 +2257,15 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "=== STAFF — Timestamp checks ===\n",
+      " STAFF — Timestamp checks \n",
       "Detected time columns: []\n",
       "No time-like columns detected.\n",
       "\n",
-      "=== STAFF_SCHEDULE — Timestamp checks ===\n",
+      " STAFF_SCHEDULE — Timestamp checks \n",
       "Detected time columns: []\n",
       "No time-like columns detected.\n",
       "\n",
-      "=== SERVICES_WEEKLY — Timestamp checks ===\n",
+      " SERVICES_WEEKLY — Timestamp checks \n",
       "Detected time columns: []\n",
       "No time-like columns detected.\n"
      ]
@@ -2303,50 +2303,42 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "--------------"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<iframe\n",
-       "    scrolling=\"no\"\n",
-       "    width=\"1020px\"\n",
-       "    height=\"820\"\n",
-       "    src=\"iframe_figures/figure_5.html\"\n",
-       "    frameborder=\"0\"\n",
-       "    allowfullscreen\n",
-       "></iframe>\n"
+      "text/plain": [
+       "patient_id        object\n",
+       "name              object\n",
+       "age                int64\n",
+       "arrival_date      object\n",
+       "departure_date    object\n",
+       "service           object\n",
+       "satisfaction       int64\n",
+       "dtype: object"
       ]
      },
+     "execution_count": 18,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# fig = px.scatter(df_HBM_patients, x=\"age\", y=\"satisfaction\", color=\"service\",\n",
-    "#                  width=1000, height=800)\n",
-    "# fig.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Explore CIA Global Statistical Database"
+    "df_HBM_patients.dtypes"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2370,145 +2362,131 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Country</th>\n",
-       "      <th>Total_Population</th>\n",
-       "      <th>Population_Growth_Rate</th>\n",
-       "      <th>Birth_Rate</th>\n",
-       "      <th>Death_Rate</th>\n",
-       "      <th>Net_Migration_Rate</th>\n",
-       "      <th>Median_Age</th>\n",
-       "      <th>Sex_Ratio</th>\n",
-       "      <th>Infant_Mortality_Rate</th>\n",
-       "      <th>Total_Fertility_Rate</th>\n",
-       "      <th>Total_Literacy_Rate</th>\n",
-       "      <th>Male_Literacy_Rate</th>\n",
-       "      <th>Female_Literacy_Rate</th>\n",
-       "      <th>Youth_Unemployment_Rate</th>\n",
+       "      <th>arrival_date</th>\n",
+       "      <th>departure_date</th>\n",
+       "      <th>ALOS_days</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>91</th>\n",
-       "      <td>GHANA</td>\n",
-       "      <td>33846114</td>\n",
-       "      <td>2.19%</td>\n",
-       "      <td>28.04</td>\n",
-       "      <td>5.99</td>\n",
-       "      <td>0.16</td>\n",
-       "      <td>21.4</td>\n",
-       "      <td>0.95</td>\n",
-       "      <td>31.87</td>\n",
-       "      <td>3.61</td>\n",
-       "      <td>79%</td>\n",
-       "      <td>6.6%</td>\n",
-       "      <td>0.3%</td>\n",
-       "      <td>9.6%</td>\n",
+       "      <th>count</th>\n",
+       "      <td>263</td>\n",
+       "      <td>263</td>\n",
+       "      <td>263.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>251</th>\n",
-       "      <td>VIRGIN ISLANDS</td>\n",
-       "      <td>104917</td>\n",
-       "      <td>0.49%</td>\n",
-       "      <td>11.40</td>\n",
-       "      <td>9.00</td>\n",
-       "      <td>7.30</td>\n",
-       "      <td>42.7</td>\n",
-       "      <td>0.90</td>\n",
-       "      <td>7.50</td>\n",
-       "      <td>1.98</td>\n",
+       "      <th>mean</th>\n",
+       "      <td>2025-07-01 01:49:30.342205440</td>\n",
+       "      <td>2025-07-08 05:39:28.060836608</td>\n",
+       "      <td>7.159696</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>2025-01-02 00:00:00</td>\n",
+       "      <td>2025-01-13 00:00:00</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>2025-03-25 00:00:00</td>\n",
+       "      <td>2025-04-01 12:00:00</td>\n",
+       "      <td>4.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>2025-06-30 00:00:00</td>\n",
+       "      <td>2025-07-08 00:00:00</td>\n",
+       "      <td>7.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>2025-09-29 00:00:00</td>\n",
+       "      <td>2025-10-07 00:00:00</td>\n",
+       "      <td>10.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>2025-12-31 00:00:00</td>\n",
+       "      <td>2026-01-10 00:00:00</td>\n",
+       "      <td>14.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
        "      <td>NaN</td>\n",
-       "      <td>24.1%</td>\n",
-       "      <td>37.3%</td>\n",
-       "      <td>27%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>108</th>\n",
-       "      <td>ICELAND</td>\n",
-       "      <td>360872</td>\n",
-       "      <td>0.89%</td>\n",
-       "      <td>12.80</td>\n",
-       "      <td>6.57</td>\n",
-       "      <td>2.69</td>\n",
-       "      <td>37.1</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>1.63</td>\n",
-       "      <td>1.95</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>11.9%</td>\n",
-       "      <td>12%</td>\n",
-       "      <td>13.4%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>220</th>\n",
-       "      <td>SUDAN</td>\n",
-       "      <td>49197555</td>\n",
-       "      <td>2.55%</td>\n",
-       "      <td>33.30</td>\n",
-       "      <td>6.20</td>\n",
-       "      <td>1.60</td>\n",
-       "      <td>19.1</td>\n",
-       "      <td>1.01</td>\n",
-       "      <td>41.40</td>\n",
-       "      <td>4.54</td>\n",
-       "      <td>60.7%</td>\n",
-       "      <td>65.4%</td>\n",
-       "      <td>56.1%</td>\n",
-       "      <td>35.6%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>113</th>\n",
-       "      <td>IRAQ</td>\n",
-       "      <td>41266109</td>\n",
-       "      <td>1.94%</td>\n",
-       "      <td>24.22</td>\n",
-       "      <td>3.88</td>\n",
-       "      <td>0.98</td>\n",
-       "      <td>21.2</td>\n",
-       "      <td>1.01</td>\n",
-       "      <td>19.17</td>\n",
-       "      <td>3.17</td>\n",
-       "      <td>85.6%</td>\n",
-       "      <td>35.1%</td>\n",
-       "      <td>1.8%</td>\n",
-       "      <td>27.2%</td>\n",
+       "      <td>3.815043</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            Country Total_Population Population_Growth_Rate  Birth_Rate  \\\n",
-       "91            GHANA         33846114                  2.19%       28.04   \n",
-       "251  VIRGIN ISLANDS           104917                  0.49%       11.40   \n",
-       "108         ICELAND           360872                  0.89%       12.80   \n",
-       "220           SUDAN         49197555                  2.55%       33.30   \n",
-       "113            IRAQ         41266109                  1.94%       24.22   \n",
+       "                        arrival_date                 departure_date  \\\n",
+       "count                            263                            263   \n",
+       "mean   2025-07-01 01:49:30.342205440  2025-07-08 05:39:28.060836608   \n",
+       "min              2025-01-02 00:00:00            2025-01-13 00:00:00   \n",
+       "25%              2025-03-25 00:00:00            2025-04-01 12:00:00   \n",
+       "50%              2025-06-30 00:00:00            2025-07-08 00:00:00   \n",
+       "75%              2025-09-29 00:00:00            2025-10-07 00:00:00   \n",
+       "max              2025-12-31 00:00:00            2026-01-10 00:00:00   \n",
+       "std                              NaN                            NaN   \n",
        "\n",
-       "     Death_Rate  Net_Migration_Rate  Median_Age  Sex_Ratio  \\\n",
-       "91         5.99                0.16        21.4       0.95   \n",
-       "251        9.00                7.30        42.7       0.90   \n",
-       "108        6.57                2.69        37.1       1.00   \n",
-       "220        6.20                1.60        19.1       1.01   \n",
-       "113        3.88                0.98        21.2       1.01   \n",
-       "\n",
-       "     Infant_Mortality_Rate  Total_Fertility_Rate Total_Literacy_Rate  \\\n",
-       "91                   31.87                  3.61                 79%   \n",
-       "251                   7.50                  1.98                 NaN   \n",
-       "108                   1.63                  1.95                 NaN   \n",
-       "220                  41.40                  4.54               60.7%   \n",
-       "113                  19.17                  3.17               85.6%   \n",
-       "\n",
-       "    Male_Literacy_Rate Female_Literacy_Rate Youth_Unemployment_Rate  \n",
-       "91                6.6%                 0.3%                    9.6%  \n",
-       "251              24.1%                37.3%                     27%  \n",
-       "108              11.9%                  12%                   13.4%  \n",
-       "220              65.4%                56.1%                   35.6%  \n",
-       "113              35.1%                 1.8%                   27.2%  "
+       "        ALOS_days  \n",
+       "count  263.000000  \n",
+       "mean     7.159696  \n",
+       "min      1.000000  \n",
+       "25%      4.000000  \n",
+       "50%      7.000000  \n",
+       "75%     10.000000  \n",
+       "max     14.000000  \n",
+       "std      3.815043  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "patients_ALOS_ED = df_HBM_patients[df_HBM_patients['service'] == 'emergency']\n",
+    "patients_ALOS_ED = patients_ALOS_ED[['patient_id', 'arrival_date', 'departure_date']]\n",
+    "\n",
+    "patients_ALOS_ED['arrival_date'] = pd.to_datetime(patients_ALOS_ED['arrival_date'])\n",
+    "patients_ALOS_ED['departure_date'] = pd.to_datetime(patients_ALOS_ED['departure_date'])\n",
+    "\n",
+    "patients_ALOS_ED['ALOS_days'] = (patients_ALOS_ED['departure_date'] - patients_ALOS_ED['arrival_date']).dt.days\n",
+    "patients_ALOS_ED.describe()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "--------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Explore CIA Global Statistical Database"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df_CIA_demographics' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[17]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mdf_CIA_demographics\u001b[49m.sample(\u001b[32m5\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'df_CIA_demographics' is not defined"
+     ]
     }
    ],
    "source": [
@@ -2704,7 +2682,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -2718,7 +2696,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
